Correction of file_index.csv and reculcultation of Notebooks

--- a/BetsExploring2018/Notes/1_download-raw.ipynb
+++ b/BetsExploring2018/Notes/1_download-raw.ipynb
@@ -145,7 +145,6 @@
     "            except:\n",
     "                print(Fore.RED + \"Could not download \" + file_ori_url) \n",
     "                \n",
-    "    print(result)\n",
     "    print(Fore.YELLOW + \"Download finished\")\n"
    ]
   },
@@ -1202,57 +1201,57 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[34mReading: Greece G1 EthnikiKatigoria\n",
-      "\u001b[32mhttp://www.football-data.co.uk/new/G1.csv\n",
-      "\u001b[32m-> ../Data/Raw/Extra/Greece/EthnikiKatigoria.csv\n",
-      "\u001b[34mReading: Argentina ARG Liga 0304\n",
-      "\u001b[32mhttp://www.football-data.co.uk/mmz4281/0304/ARG.csv\n",
-      "\u001b[32m-> ../Data/Raw/Main/Argentina/Liga/0304.csv\n",
-      "\u001b[34mReading: Argentina ARG Liga 0405\n",
-      "\u001b[32mhttp://www.football-data.co.uk/mmz4281/0405/ARG.csv\n",
-      "\u001b[32m-> ../Data/Raw/Main/Argentina/Liga/0405.csv\n",
-      "\u001b[34mReading: Argentina ARG Liga 0506\n",
-      "\u001b[32mhttp://www.football-data.co.uk/mmz4281/0506/ARG.csv\n",
-      "\u001b[32m-> ../Data/Raw/Main/Argentina/Liga/0506.csv\n",
-      "\u001b[34mReading: Argentina ARG Liga 0607\n",
-      "\u001b[32mhttp://www.football-data.co.uk/mmz4281/0607/ARG.csv\n",
-      "\u001b[32m-> ../Data/Raw/Main/Argentina/Liga/0607.csv\n",
-      "\u001b[34mReading: Argentina ARG Liga 0708\n",
-      "\u001b[32mhttp://www.football-data.co.uk/mmz4281/0708/ARG.csv\n",
-      "\u001b[32m-> ../Data/Raw/Main/Argentina/Liga/0708.csv\n",
-      "\u001b[34mReading: Argentina ARG Liga 0809\n",
-      "\u001b[32mhttp://www.football-data.co.uk/mmz4281/0809/ARG.csv\n",
-      "\u001b[32m-> ../Data/Raw/Main/Argentina/Liga/0809.csv\n",
-      "\u001b[34mReading: Argentina ARG Liga 0910\n",
-      "\u001b[32mhttp://www.football-data.co.uk/mmz4281/0910/ARG.csv\n",
-      "\u001b[32m-> ../Data/Raw/Main/Argentina/Liga/0910.csv\n",
-      "\u001b[34mReading: Argentina ARG Liga 1011\n",
-      "\u001b[32mhttp://www.football-data.co.uk/mmz4281/1011/ARG.csv\n",
-      "\u001b[32m-> ../Data/Raw/Main/Argentina/Liga/1011.csv\n",
-      "\u001b[34mReading: Argentina ARG Liga 1112\n",
-      "\u001b[32mhttp://www.football-data.co.uk/mmz4281/1112/ARG.csv\n",
-      "\u001b[32m-> ../Data/Raw/Main/Argentina/Liga/1112.csv\n",
-      "\u001b[34mReading: Argentina ARG Liga 1213\n",
-      "\u001b[32mhttp://www.football-data.co.uk/mmz4281/1213/ARG.csv\n",
-      "\u001b[32m-> ../Data/Raw/Main/Argentina/Liga/1213.csv\n",
-      "\u001b[34mReading: Argentina ARG Liga 1314\n",
-      "\u001b[32mhttp://www.football-data.co.uk/mmz4281/1314/ARG.csv\n",
-      "\u001b[32m-> ../Data/Raw/Main/Argentina/Liga/1314.csv\n",
-      "\u001b[34mReading: Argentina ARG Liga 1415\n",
-      "\u001b[32mhttp://www.football-data.co.uk/mmz4281/1415/ARG.csv\n",
-      "\u001b[32m-> ../Data/Raw/Main/Argentina/Liga/1415.csv\n",
-      "\u001b[34mReading: Argentina ARG Liga 1516\n",
-      "\u001b[32mhttp://www.football-data.co.uk/mmz4281/1516/ARG.csv\n",
-      "\u001b[32m-> ../Data/Raw/Main/Argentina/Liga/1516.csv\n",
-      "\u001b[34mReading: Argentina ARG Liga 1617\n",
-      "\u001b[32mhttp://www.football-data.co.uk/mmz4281/1617/ARG.csv\n",
-      "\u001b[32m-> ../Data/Raw/Main/Argentina/Liga/1617.csv\n",
-      "\u001b[34mReading: Argentina ARG Liga 1718\n",
-      "\u001b[32mhttp://www.football-data.co.uk/mmz4281/1718/ARG.csv\n",
-      "\u001b[32m-> ../Data/Raw/Main/Argentina/Liga/1718.csv\n",
-      "\u001b[34mReading: Argentina ARG Liga 1819\n",
-      "\u001b[32mhttp://www.football-data.co.uk/mmz4281/1819/ARG.csv\n",
-      "\u001b[32m-> ../Data/Raw/Main/Argentina/Liga/1819.csv\n",
+      "\u001b[34mReading: Greece G1 EthnikiKatigoria 0304\n",
+      "\u001b[32mhttp://www.football-data.co.uk/mmz4281/0304/G1.csv\n",
+      "\u001b[32m-> ../Data/Raw/Main/Greece/EthnikiKatigoria/0304.csv\n",
+      "\u001b[34mReading: Greece G1 EthnikiKatigoria 0405\n",
+      "\u001b[32mhttp://www.football-data.co.uk/mmz4281/0405/G1.csv\n",
+      "\u001b[32m-> ../Data/Raw/Main/Greece/EthnikiKatigoria/0405.csv\n",
+      "\u001b[34mReading: Greece G1 EthnikiKatigoria 0506\n",
+      "\u001b[32mhttp://www.football-data.co.uk/mmz4281/0506/G1.csv\n",
+      "\u001b[32m-> ../Data/Raw/Main/Greece/EthnikiKatigoria/0506.csv\n",
+      "\u001b[34mReading: Greece G1 EthnikiKatigoria 0607\n",
+      "\u001b[32mhttp://www.football-data.co.uk/mmz4281/0607/G1.csv\n",
+      "\u001b[32m-> ../Data/Raw/Main/Greece/EthnikiKatigoria/0607.csv\n",
+      "\u001b[34mReading: Greece G1 EthnikiKatigoria 0708\n",
+      "\u001b[32mhttp://www.football-data.co.uk/mmz4281/0708/G1.csv\n",
+      "\u001b[32m-> ../Data/Raw/Main/Greece/EthnikiKatigoria/0708.csv\n",
+      "\u001b[34mReading: Greece G1 EthnikiKatigoria 0809\n",
+      "\u001b[32mhttp://www.football-data.co.uk/mmz4281/0809/G1.csv\n",
+      "\u001b[32m-> ../Data/Raw/Main/Greece/EthnikiKatigoria/0809.csv\n",
+      "\u001b[34mReading: Greece G1 EthnikiKatigoria 0910\n",
+      "\u001b[32mhttp://www.football-data.co.uk/mmz4281/0910/G1.csv\n",
+      "\u001b[32m-> ../Data/Raw/Main/Greece/EthnikiKatigoria/0910.csv\n",
+      "\u001b[34mReading: Greece G1 EthnikiKatigoria 1011\n",
+      "\u001b[32mhttp://www.football-data.co.uk/mmz4281/1011/G1.csv\n",
+      "\u001b[32m-> ../Data/Raw/Main/Greece/EthnikiKatigoria/1011.csv\n",
+      "\u001b[34mReading: Greece G1 EthnikiKatigoria 1112\n",
+      "\u001b[32mhttp://www.football-data.co.uk/mmz4281/1112/G1.csv\n",
+      "\u001b[32m-> ../Data/Raw/Main/Greece/EthnikiKatigoria/1112.csv\n",
+      "\u001b[34mReading: Greece G1 EthnikiKatigoria 1213\n",
+      "\u001b[32mhttp://www.football-data.co.uk/mmz4281/1213/G1.csv\n",
+      "\u001b[32m-> ../Data/Raw/Main/Greece/EthnikiKatigoria/1213.csv\n",
+      "\u001b[34mReading: Greece G1 EthnikiKatigoria 1314\n",
+      "\u001b[32mhttp://www.football-data.co.uk/mmz4281/1314/G1.csv\n",
+      "\u001b[32m-> ../Data/Raw/Main/Greece/EthnikiKatigoria/1314.csv\n",
+      "\u001b[34mReading: Greece G1 EthnikiKatigoria 1415\n",
+      "\u001b[32mhttp://www.football-data.co.uk/mmz4281/1415/G1.csv\n",
+      "\u001b[32m-> ../Data/Raw/Main/Greece/EthnikiKatigoria/1415.csv\n",
+      "\u001b[34mReading: Greece G1 EthnikiKatigoria 1516\n",
+      "\u001b[32mhttp://www.football-data.co.uk/mmz4281/1516/G1.csv\n",
+      "\u001b[32m-> ../Data/Raw/Main/Greece/EthnikiKatigoria/1516.csv\n",
+      "\u001b[34mReading: Greece G1 EthnikiKatigoria 1617\n",
+      "\u001b[32mhttp://www.football-data.co.uk/mmz4281/1617/G1.csv\n",
+      "\u001b[32m-> ../Data/Raw/Main/Greece/EthnikiKatigoria/1617.csv\n",
+      "\u001b[34mReading: Greece G1 EthnikiKatigoria 1718\n",
+      "\u001b[32mhttp://www.football-data.co.uk/mmz4281/1718/G1.csv\n",
+      "\u001b[32m-> ../Data/Raw/Main/Greece/EthnikiKatigoria/1718.csv\n",
+      "\u001b[34mReading: Greece G1 EthnikiKatigoria 1819\n",
+      "\u001b[32mhttp://www.football-data.co.uk/mmz4281/1819/G1.csv\n",
+      "\u001b[32m-> ../Data/Raw/Main/Greece/EthnikiKatigoria/1819.csv\n",
+      "\u001b[34mReading: Argentina ARG Liga\n",
+      "\u001b[32mhttp://www.football-data.co.uk/new/ARG.csv\n",
+      "\u001b[32m-> ../Data/Raw/Extra/Argentina/Liga.csv\n",
       "\u001b[34mReading: Austria AUT Liga\n",
       "\u001b[32mhttp://www.football-data.co.uk/new/AUT.csv\n",
       "\u001b[32m-> ../Data/Raw/Extra/Austria/Liga.csv\n",
@@ -1298,70 +1297,6 @@
       "\u001b[34mReading: USA USA Liga\n",
       "\u001b[32mhttp://www.football-data.co.uk/new/USA.csv\n",
       "\u001b[32m-> ../Data/Raw/Extra/USA/Liga.csv\n",
-      "   ori_folder ori_file           dest_folder dest_file\n",
-      "0        0304   E0.csv       England/Premier  0304.csv\n",
-      "0        0405   E0.csv       England/Premier  0405.csv\n",
-      "0        0506   E0.csv       England/Premier  0506.csv\n",
-      "0        0607   E0.csv       England/Premier  0607.csv\n",
-      "0        0708   E0.csv       England/Premier  0708.csv\n",
-      "0        0809   E0.csv       England/Premier  0809.csv\n",
-      "0        0910   E0.csv       England/Premier  0910.csv\n",
-      "0        1011   E0.csv       England/Premier  1011.csv\n",
-      "0        1112   E0.csv       England/Premier  1112.csv\n",
-      "0        1213   E0.csv       England/Premier  1213.csv\n",
-      "0        1314   E0.csv       England/Premier  1314.csv\n",
-      "0        1415   E0.csv       England/Premier  1415.csv\n",
-      "0        1516   E0.csv       England/Premier  1516.csv\n",
-      "0        1617   E0.csv       England/Premier  1617.csv\n",
-      "0        1718   E0.csv       England/Premier  1718.csv\n",
-      "0        1819   E0.csv       England/Premier  1819.csv\n",
-      "0        0304   E1.csv  England/Championship  0304.csv\n",
-      "0        0405   E1.csv  England/Championship  0405.csv\n",
-      "0        0506   E1.csv  England/Championship  0506.csv\n",
-      "0        0607   E1.csv  England/Championship  0607.csv\n",
-      "0        0708   E1.csv  England/Championship  0708.csv\n",
-      "0        0809   E1.csv  England/Championship  0809.csv\n",
-      "0        0910   E1.csv  England/Championship  0910.csv\n",
-      "0        1011   E1.csv  England/Championship  1011.csv\n",
-      "0        1112   E1.csv  England/Championship  1112.csv\n",
-      "0        1213   E1.csv  England/Championship  1213.csv\n",
-      "0        1314   E1.csv  England/Championship  1314.csv\n",
-      "0        1415   E1.csv  England/Championship  1415.csv\n",
-      "0        1516   E1.csv  England/Championship  1516.csv\n",
-      "0        1617   E1.csv  England/Championship  1617.csv\n",
-      "..        ...      ...                   ...       ...\n",
-      "0        0405  ARG.csv        Argentina/Liga  0405.csv\n",
-      "0        0506  ARG.csv        Argentina/Liga  0506.csv\n",
-      "0        0607  ARG.csv        Argentina/Liga  0607.csv\n",
-      "0        0708  ARG.csv        Argentina/Liga  0708.csv\n",
-      "0        0809  ARG.csv        Argentina/Liga  0809.csv\n",
-      "0        0910  ARG.csv        Argentina/Liga  0910.csv\n",
-      "0        1011  ARG.csv        Argentina/Liga  1011.csv\n",
-      "0        1112  ARG.csv        Argentina/Liga  1112.csv\n",
-      "0        1213  ARG.csv        Argentina/Liga  1213.csv\n",
-      "0        1314  ARG.csv        Argentina/Liga  1314.csv\n",
-      "0        1415  ARG.csv        Argentina/Liga  1415.csv\n",
-      "0        1516  ARG.csv        Argentina/Liga  1516.csv\n",
-      "0        1617  ARG.csv        Argentina/Liga  1617.csv\n",
-      "0        1718  ARG.csv        Argentina/Liga  1718.csv\n",
-      "0        1819  ARG.csv        Argentina/Liga  1819.csv\n",
-      "0              AUT.csv               Austria  Liga.csv\n",
-      "0              BRA.csv                Brazil  Liga.csv\n",
-      "0              CHN.csv                 China  Liga.csv\n",
-      "0              DNK.csv               Denmark  Liga.csv\n",
-      "0              FIN.csv               Finland  Liga.csv\n",
-      "0              IRL.csv               Ireland  Liga.csv\n",
-      "0              JPN.csv                 Japan  Liga.csv\n",
-      "0              MEX.csv                Mexico  Liga.csv\n",
-      "0              NOR.csv                Norway  Liga.csv\n",
-      "0              POL.csv                Poland  Liga.csv\n",
-      "0              ROU.csv               Romania  Liga.csv\n",
-      "0              RUS.csv                Russia  Liga.csv\n",
-      "0              SWE.csv                Sweden  Liga.csv\n",
-      "0              SWZ.csv           Switzerland  Liga.csv\n",
-      "0              USA.csv                   USA  Liga.csv\n",
-      "\n",
-      "[368 rows x 4 columns]\n",
       "\u001b[33mDownload finished\n"
      ]
     }
