--- a/BetsExploring2018/Notes/4_fieldsAnalysis-raw_to_correct.ipynb
+++ b/BetsExploring2018/Notes/4_fieldsAnalysis-raw_to_correct.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -39,8 +39,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Open dataset\n",
@@ -51,16 +53,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(101888, 25)"
+       "(105503, 20)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,20 +73,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Index(['Country', 'Competition', 'Season', 'Div', 'Date', 'HomeTeam',\n",
-       "       'AwayTeam', 'WHH', 'WHD', 'WHA', 'B365H', 'B365D', 'B365A', 'SBH',\n",
-       "       'SBD', 'SBA', 'IWH', 'IWD', 'IWA', 'GBH', 'GBD', 'GBA', 'LBH', 'LBD',\n",
-       "       'LBA'],\n",
+       "       'AwayTeam', 'FTR', 'WHH', 'WHD', 'WHA', 'SBH', 'SBD', 'SBA', 'IWH',\n",
+       "       'IWD', 'IWA', 'GBH', 'GBD', 'GBA'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -126,10 +127,12 @@
        "      <th>Date</th>\n",
        "      <th>HomeTeam</th>\n",
        "      <th>AwayTeam</th>\n",
+       "      <th>FTR</th>\n",
        "      <th>WHH</th>\n",
        "      <th>WHD</th>\n",
        "      <th>WHA</th>\n",
-       "      <th>...</th>\n",
+       "      <th>SBH</th>\n",
+       "      <th>SBD</th>\n",
        "      <th>SBA</th>\n",
        "      <th>IWH</th>\n",
        "      <th>IWD</th>\n",
@@ -137,163 +140,152 @@
        "      <th>GBH</th>\n",
        "      <th>GBD</th>\n",
        "      <th>GBA</th>\n",
-       "      <th>LBH</th>\n",
-       "      <th>LBD</th>\n",
-       "      <th>LBA</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>39200</th>\n",
+       "      <th>91436</th>\n",
+       "      <td>Spain</td>\n",
+       "      <td>Primera</td>\n",
+       "      <td>2007-2008</td>\n",
+       "      <td>SP1</td>\n",
+       "      <td>2008-01-26</td>\n",
+       "      <td>Sevilla</td>\n",
+       "      <td>Osasuna</td>\n",
+       "      <td>H</td>\n",
+       "      <td>1.50</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>1.55</td>\n",
+       "      <td>3.40</td>\n",
+       "      <td>5.80</td>\n",
+       "      <td>1.55</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>6.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37705</th>\n",
+       "      <td>England</td>\n",
+       "      <td>Premier</td>\n",
+       "      <td>2017-2018</td>\n",
+       "      <td>E0</td>\n",
+       "      <td>2017-04-11</td>\n",
+       "      <td>Newcastle</td>\n",
+       "      <td>Bournemouth</td>\n",
+       "      <td>A</td>\n",
+       "      <td>2.00</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.90</td>\n",
+       "      <td>3.50</td>\n",
+       "      <td>4.10</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39961</th>\n",
        "      <td>France</td>\n",
        "      <td>Division2</td>\n",
-       "      <td>2006-2007</td>\n",
+       "      <td>2009-2010</td>\n",
        "      <td>F2</td>\n",
-       "      <td>2007-05-18</td>\n",
-       "      <td>Le Havre</td>\n",
-       "      <td>Niort</td>\n",
-       "      <td>2.00</td>\n",
-       "      <td>2.90</td>\n",
-       "      <td>3.6</td>\n",
-       "      <td>...</td>\n",
-       "      <td>3.20</td>\n",
-       "      <td>2.10</td>\n",
-       "      <td>2.80</td>\n",
-       "      <td>3.30</td>\n",
-       "      <td>2.1</td>\n",
-       "      <td>2.9</td>\n",
-       "      <td>3.30</td>\n",
-       "      <td>2.10</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>3.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>82991</th>\n",
-       "      <td>Scotland</td>\n",
-       "      <td>Division3</td>\n",
-       "      <td>2015-2016</td>\n",
-       "      <td>SC3</td>\n",
-       "      <td>2016-02-13</td>\n",
-       "      <td>Stirling</td>\n",
-       "      <td>Berwick</td>\n",
-       "      <td>1.83</td>\n",
-       "      <td>3.75</td>\n",
+       "      <td>2010-07-05</td>\n",
+       "      <td>Tours</td>\n",
+       "      <td>Bastia</td>\n",
+       "      <td>D</td>\n",
+       "      <td>1.91</td>\n",
+       "      <td>3.1</td>\n",
        "      <td>4.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.85</td>\n",
-       "      <td>3.55</td>\n",
-       "      <td>3.45</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.80</td>\n",
-       "      <td>3.8</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.0</td>\n",
        "      <td>3.6</td>\n",
+       "      <td>1.90</td>\n",
+       "      <td>3.10</td>\n",
+       "      <td>3.80</td>\n",
+       "      <td>1.95</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>3.75</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14381</th>\n",
+       "      <th>17675</th>\n",
        "      <td>England</td>\n",
        "      <td>Conference</td>\n",
-       "      <td>2010-2011</td>\n",
+       "      <td>2017-2018</td>\n",
        "      <td>EC</td>\n",
-       "      <td>2010-09-21</td>\n",
-       "      <td>Forest Green</td>\n",
-       "      <td>Eastbourne Borough</td>\n",
+       "      <td>2017-02-09</td>\n",
+       "      <td>Barrow</td>\n",
+       "      <td>Boreham Wood</td>\n",
+       "      <td>H</td>\n",
        "      <td>2.25</td>\n",
-       "      <td>3.50</td>\n",
+       "      <td>3.2</td>\n",
        "      <td>3.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2.95</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>2.20</td>\n",
-       "      <td>3.10</td>\n",
-       "      <td>2.80</td>\n",
-       "      <td>2.2</td>\n",
-       "      <td>3.3</td>\n",
+       "      <td>3.15</td>\n",
        "      <td>2.85</td>\n",
-       "      <td>2.10</td>\n",
-       "      <td>3.4</td>\n",
-       "      <td>2.8</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5296</th>\n",
+       "      <th>18691</th>\n",
        "      <td>England</td>\n",
-       "      <td>Championship</td>\n",
-       "      <td>2006-2007</td>\n",
-       "      <td>E1</td>\n",
-       "      <td>2007-03-13</td>\n",
-       "      <td>Norwich</td>\n",
-       "      <td>Birmingham</td>\n",
-       "      <td>2.80</td>\n",
-       "      <td>3.20</td>\n",
-       "      <td>2.2</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2.20</td>\n",
-       "      <td>2.80</td>\n",
-       "      <td>3.10</td>\n",
-       "      <td>2.20</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>League1</td>\n",
+       "      <td>2005-2006</td>\n",
+       "      <td>E2</td>\n",
+       "      <td>2006-04-02</td>\n",
+       "      <td>Brentford</td>\n",
+       "      <td>Walsall</td>\n",
+       "      <td>H</td>\n",
+       "      <td>1.70</td>\n",
        "      <td>3.2</td>\n",
-       "      <td>2.20</td>\n",
-       "      <td>3.00</td>\n",
-       "      <td>3.2</td>\n",
-       "      <td>2.1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>83994</th>\n",
-       "      <td>Scotland</td>\n",
-       "      <td>Premier</td>\n",
-       "      <td>2007-2008</td>\n",
-       "      <td>SC0</td>\n",
-       "      <td>2007-11-24</td>\n",
-       "      <td>Celtic</td>\n",
-       "      <td>Aberdeen</td>\n",
-       "      <td>1.29</td>\n",
-       "      <td>4.50</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>10.00</td>\n",
-       "      <td>1.27</td>\n",
-       "      <td>4.30</td>\n",
-       "      <td>8.50</td>\n",
-       "      <td>1.3</td>\n",
-       "      <td>4.6</td>\n",
-       "      <td>9.00</td>\n",
-       "      <td>1.25</td>\n",
        "      <td>4.5</td>\n",
-       "      <td>10.0</td>\n",
+       "      <td>1.7</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>1.75</td>\n",
+       "      <td>3.20</td>\n",
+       "      <td>4.00</td>\n",
+       "      <td>1.70</td>\n",
+       "      <td>3.3</td>\n",
+       "      <td>4.70</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 25 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "        Country   Competition     Season  Div       Date      HomeTeam  \\\n",
-       "39200    France     Division2  2006-2007   F2 2007-05-18      Le Havre   \n",
-       "82991  Scotland     Division3  2015-2016  SC3 2016-02-13      Stirling   \n",
-       "14381   England    Conference  2010-2011   EC 2010-09-21  Forest Green   \n",
-       "5296    England  Championship  2006-2007   E1 2007-03-13       Norwich   \n",
-       "83994  Scotland       Premier  2007-2008  SC0 2007-11-24        Celtic   \n",
+       "       Country Competition     Season  Div       Date   HomeTeam  \\\n",
+       "91436    Spain     Primera  2007-2008  SP1 2008-01-26    Sevilla   \n",
+       "37705  England     Premier  2017-2018   E0 2017-04-11  Newcastle   \n",
+       "39961   France   Division2  2009-2010   F2 2010-07-05      Tours   \n",
+       "17675  England  Conference  2017-2018   EC 2017-02-09     Barrow   \n",
+       "18691  England     League1  2005-2006   E2 2006-04-02  Brentford   \n",
        "\n",
-       "                 AwayTeam   WHH   WHD  WHA  ...     SBA   IWH   IWD   IWA  \\\n",
-       "39200               Niort  2.00  2.90  3.6  ...    3.20  2.10  2.80  3.30   \n",
-       "82991             Berwick  1.83  3.75  4.0  ...     NaN  1.85  3.55  3.45   \n",
-       "14381  Eastbourne Borough  2.25  3.50  3.0  ...    2.95  2.20  3.10  2.80   \n",
-       "5296           Birmingham  2.80  3.20  2.2  ...    2.20  2.80  3.10  2.20   \n",
-       "83994            Aberdeen  1.29  4.50  8.0  ...   10.00  1.27  4.30  8.50   \n",
+       "           AwayTeam FTR   WHH  WHD  WHA  SBH  SBD  SBA   IWH   IWD   IWA  \\\n",
+       "91436       Osasuna   H  1.50  3.4  6.0  1.5  3.6  6.5  1.55  3.40  5.80   \n",
+       "37705   Bournemouth   A  2.00  3.4  4.0  NaN  NaN  NaN  1.90  3.50  4.10   \n",
+       "39961        Bastia   D  1.91  3.1  4.0  2.0  3.0  3.6  1.90  3.10  3.80   \n",
+       "17675  Boreham Wood   H  2.25  3.2  3.0  NaN  NaN  NaN  2.20  3.15  2.85   \n",
+       "18691       Walsall   H  1.70  3.2  4.5  1.7  3.4  4.5  1.75  3.20  4.00   \n",
        "\n",
-       "       GBH  GBD   GBA   LBH  LBD   LBA  \n",
-       "39200  2.1  2.9  3.30  2.10  3.0   3.2  \n",
-       "82991  NaN  NaN   NaN  1.80  3.8   3.6  \n",
-       "14381  2.2  3.3  2.85  2.10  3.4   2.8  \n",
-       "5296   3.0  3.2  2.20  3.00  3.2   2.1  \n",
-       "83994  1.3  4.6  9.00  1.25  4.5  10.0  \n",
-       "\n",
-       "[5 rows x 25 columns]"
+       "        GBH  GBD   GBA  \n",
+       "91436  1.55  3.6  6.00  \n",
+       "37705   NaN  NaN   NaN  \n",
+       "39961  1.95  3.1  3.75  \n",
+       "17675   NaN  NaN   NaN  \n",
+       "18691  1.70  3.3  4.70  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -317,12 +309,10 @@
        "Date           datetime64[ns]\n",
        "HomeTeam               object\n",
        "AwayTeam               object\n",
+       "FTR                    object\n",
        "WHH                   float64\n",
        "WHD                   float64\n",
        "WHA                   float64\n",
-       "B365H                 float64\n",
-       "B365D                 float64\n",
-       "B365A                 float64\n",
        "SBH                   float64\n",
        "SBD                   float64\n",
        "SBA                   float64\n",
@@ -332,13 +322,10 @@
        "GBH                   float64\n",
        "GBD                   float64\n",
        "GBA                   float64\n",
-       "LBH                   float64\n",
-       "LBD                   float64\n",
-       "LBA                   float64\n",
        "dtype: object"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
