Downloaded data exploring

--- a/BetsExploring2018/Notes/0_introduction.ipynb
+++ b/BetsExploring2018/Notes/0_introduction.ipynb
@@ -51,7 +51,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -81,6 +80,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "parse_dates=[\"Date\"]\n",
+    "ds = pd.read_csv(\"../Data/Interim/main_competitions.csv\", parse_dates=parse_dates, index_col=False)\n",
+    "display(ds.dropna().sample(10))\n",
+    "\n",
+    "n_countries = ds['Country'].nunique()\n",
+    "print (\"Countries   : \", n_countries)\n",
+    "n_competitions = ds[['Country','Competition']].drop_duplicates().count()[0]\n",
+    "print (\"Competitions: \", n_competitions)\n",
+    "n_seasons = ds[['Country','Competition', 'Season']].drop_duplicates().count()[0]\n",
+    "\n",
+    "print (\"Seasons     : \", n_seasons)\n",
+    "n_teams = ds['HomeTeam'].nunique()\n",
+    "print (\"Teams       : \", n_teams)\n",
+    "n_matches = ds.count()[0]\n",
+    "print (\"Matches     : \", n_matches)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -102,7 +126,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -152,7 +175,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
