Ampliation of expected outcome definition

--- a/BetsExploring2018/Notes/0_introduction.ipynb
+++ b/BetsExploring2018/Notes/0_introduction.ipynb
@@ -81,9 +81,340 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Competition</th>\n",
+       "      <th>Season</th>\n",
+       "      <th>Div</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>HomeTeam</th>\n",
+       "      <th>AwayTeam</th>\n",
+       "      <th>FTR</th>\n",
+       "      <th>WHH</th>\n",
+       "      <th>WHD</th>\n",
+       "      <th>WHA</th>\n",
+       "      <th>SBH</th>\n",
+       "      <th>SBD</th>\n",
+       "      <th>SBA</th>\n",
+       "      <th>IWH</th>\n",
+       "      <th>IWD</th>\n",
+       "      <th>IWA</th>\n",
+       "      <th>GBH</th>\n",
+       "      <th>GBD</th>\n",
+       "      <th>GBA</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>13327</th>\n",
+       "      <td>England</td>\n",
+       "      <td>Conference</td>\n",
+       "      <td>2008-2009</td>\n",
+       "      <td>EC</td>\n",
+       "      <td>2008-09-20</td>\n",
+       "      <td>Rushden &amp; D</td>\n",
+       "      <td>Burton</td>\n",
+       "      <td>H</td>\n",
+       "      <td>2.10</td>\n",
+       "      <td>3.20</td>\n",
+       "      <td>3.00</td>\n",
+       "      <td>2.10</td>\n",
+       "      <td>3.20</td>\n",
+       "      <td>3.10</td>\n",
+       "      <td>2.10</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.00</td>\n",
+       "      <td>3.20</td>\n",
+       "      <td>3.20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5718</th>\n",
+       "      <td>England</td>\n",
+       "      <td>Championship</td>\n",
+       "      <td>2007-2008</td>\n",
+       "      <td>E1</td>\n",
+       "      <td>2008-12-01</td>\n",
+       "      <td>Cardiff</td>\n",
+       "      <td>Sheffield Weds</td>\n",
+       "      <td>H</td>\n",
+       "      <td>1.73</td>\n",
+       "      <td>3.40</td>\n",
+       "      <td>4.00</td>\n",
+       "      <td>1.85</td>\n",
+       "      <td>3.25</td>\n",
+       "      <td>4.00</td>\n",
+       "      <td>1.80</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>3.7</td>\n",
+       "      <td>1.85</td>\n",
+       "      <td>3.25</td>\n",
+       "      <td>4.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19366</th>\n",
+       "      <td>England</td>\n",
+       "      <td>League1</td>\n",
+       "      <td>2006-2007</td>\n",
+       "      <td>E2</td>\n",
+       "      <td>2007-06-04</td>\n",
+       "      <td>Scunthorpe</td>\n",
+       "      <td>Yeovil</td>\n",
+       "      <td>H</td>\n",
+       "      <td>1.70</td>\n",
+       "      <td>3.30</td>\n",
+       "      <td>4.33</td>\n",
+       "      <td>1.73</td>\n",
+       "      <td>3.40</td>\n",
+       "      <td>4.33</td>\n",
+       "      <td>1.70</td>\n",
+       "      <td>3.3</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1.75</td>\n",
+       "      <td>3.40</td>\n",
+       "      <td>4.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21120</th>\n",
+       "      <td>England</td>\n",
+       "      <td>League1</td>\n",
+       "      <td>2010-2011</td>\n",
+       "      <td>E2</td>\n",
+       "      <td>2010-08-21</td>\n",
+       "      <td>Peterboro</td>\n",
+       "      <td>Huddersfield</td>\n",
+       "      <td>H</td>\n",
+       "      <td>2.50</td>\n",
+       "      <td>3.20</td>\n",
+       "      <td>2.80</td>\n",
+       "      <td>2.35</td>\n",
+       "      <td>3.25</td>\n",
+       "      <td>2.70</td>\n",
+       "      <td>2.30</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>2.40</td>\n",
+       "      <td>3.25</td>\n",
+       "      <td>2.65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38896</th>\n",
+       "      <td>France</td>\n",
+       "      <td>Division2</td>\n",
+       "      <td>2006-2007</td>\n",
+       "      <td>F2</td>\n",
+       "      <td>2006-08-09</td>\n",
+       "      <td>Bastia</td>\n",
+       "      <td>Dijon</td>\n",
+       "      <td>D</td>\n",
+       "      <td>1.90</td>\n",
+       "      <td>2.75</td>\n",
+       "      <td>4.25</td>\n",
+       "      <td>1.95</td>\n",
+       "      <td>2.88</td>\n",
+       "      <td>4.00</td>\n",
+       "      <td>1.85</td>\n",
+       "      <td>2.7</td>\n",
+       "      <td>4.4</td>\n",
+       "      <td>1.91</td>\n",
+       "      <td>2.85</td>\n",
+       "      <td>4.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34777</th>\n",
+       "      <td>England</td>\n",
+       "      <td>Premier</td>\n",
+       "      <td>2009-2010</td>\n",
+       "      <td>E0</td>\n",
+       "      <td>2010-01-26</td>\n",
+       "      <td>Tottenham</td>\n",
+       "      <td>Fulham</td>\n",
+       "      <td>H</td>\n",
+       "      <td>1.50</td>\n",
+       "      <td>3.40</td>\n",
+       "      <td>6.00</td>\n",
+       "      <td>1.50</td>\n",
+       "      <td>3.75</td>\n",
+       "      <td>6.00</td>\n",
+       "      <td>1.57</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>1.57</td>\n",
+       "      <td>3.75</td>\n",
+       "      <td>5.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72341</th>\n",
+       "      <td>Netherlands</td>\n",
+       "      <td>Eredivisie</td>\n",
+       "      <td>2006-2007</td>\n",
+       "      <td>N1</td>\n",
+       "      <td>2006-10-09</td>\n",
+       "      <td>Nijmegen</td>\n",
+       "      <td>AZ Alkmaar</td>\n",
+       "      <td>A</td>\n",
+       "      <td>3.80</td>\n",
+       "      <td>3.50</td>\n",
+       "      <td>1.72</td>\n",
+       "      <td>4.20</td>\n",
+       "      <td>3.50</td>\n",
+       "      <td>1.73</td>\n",
+       "      <td>4.20</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>1.7</td>\n",
+       "      <td>4.60</td>\n",
+       "      <td>3.50</td>\n",
+       "      <td>1.66</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21408</th>\n",
+       "      <td>England</td>\n",
+       "      <td>League1</td>\n",
+       "      <td>2010-2011</td>\n",
+       "      <td>E2</td>\n",
+       "      <td>2011-01-02</td>\n",
+       "      <td>Tranmere</td>\n",
+       "      <td>Rochdale</td>\n",
+       "      <td>D</td>\n",
+       "      <td>2.40</td>\n",
+       "      <td>3.30</td>\n",
+       "      <td>2.90</td>\n",
+       "      <td>2.30</td>\n",
+       "      <td>3.25</td>\n",
+       "      <td>2.80</td>\n",
+       "      <td>2.40</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>2.35</td>\n",
+       "      <td>3.25</td>\n",
+       "      <td>2.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13509</th>\n",
+       "      <td>England</td>\n",
+       "      <td>Conference</td>\n",
+       "      <td>2008-2009</td>\n",
+       "      <td>EC</td>\n",
+       "      <td>2009-01-01</td>\n",
+       "      <td>Grays</td>\n",
+       "      <td>Ebbsfleet</td>\n",
+       "      <td>H</td>\n",
+       "      <td>2.30</td>\n",
+       "      <td>3.20</td>\n",
+       "      <td>2.62</td>\n",
+       "      <td>2.30</td>\n",
+       "      <td>3.20</td>\n",
+       "      <td>2.75</td>\n",
+       "      <td>2.10</td>\n",
+       "      <td>3.3</td>\n",
+       "      <td>2.8</td>\n",
+       "      <td>2.30</td>\n",
+       "      <td>3.25</td>\n",
+       "      <td>2.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39717</th>\n",
+       "      <td>France</td>\n",
+       "      <td>Division2</td>\n",
+       "      <td>2009-2010</td>\n",
+       "      <td>F2</td>\n",
+       "      <td>2009-10-30</td>\n",
+       "      <td>Istres</td>\n",
+       "      <td>Sedan</td>\n",
+       "      <td>H</td>\n",
+       "      <td>2.40</td>\n",
+       "      <td>2.90</td>\n",
+       "      <td>3.00</td>\n",
+       "      <td>2.30</td>\n",
+       "      <td>2.90</td>\n",
+       "      <td>3.00</td>\n",
+       "      <td>2.30</td>\n",
+       "      <td>2.9</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.35</td>\n",
+       "      <td>2.90</td>\n",
+       "      <td>3.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Country   Competition     Season Div       Date     HomeTeam  \\\n",
+       "13327      England    Conference  2008-2009  EC 2008-09-20  Rushden & D   \n",
+       "5718       England  Championship  2007-2008  E1 2008-12-01      Cardiff   \n",
+       "19366      England       League1  2006-2007  E2 2007-06-04   Scunthorpe   \n",
+       "21120      England       League1  2010-2011  E2 2010-08-21    Peterboro   \n",
+       "38896       France     Division2  2006-2007  F2 2006-08-09       Bastia   \n",
+       "34777      England       Premier  2009-2010  E0 2010-01-26    Tottenham   \n",
+       "72341  Netherlands    Eredivisie  2006-2007  N1 2006-10-09     Nijmegen   \n",
+       "21408      England       League1  2010-2011  E2 2011-01-02     Tranmere   \n",
+       "13509      England    Conference  2008-2009  EC 2009-01-01        Grays   \n",
+       "39717       France     Division2  2009-2010  F2 2009-10-30       Istres   \n",
+       "\n",
+       "             AwayTeam FTR   WHH   WHD   WHA   SBH   SBD   SBA   IWH  IWD  IWA  \\\n",
+       "13327          Burton   H  2.10  3.20  3.00  2.10  3.20  3.10  2.10  3.1  3.0   \n",
+       "5718   Sheffield Weds   H  1.73  3.40  4.00  1.85  3.25  4.00  1.80  3.2  3.7   \n",
+       "19366          Yeovil   H  1.70  3.30  4.33  1.73  3.40  4.33  1.70  3.3  4.0   \n",
+       "21120    Huddersfield   H  2.50  3.20  2.80  2.35  3.25  2.70  2.30  3.1  2.6   \n",
+       "38896           Dijon   D  1.90  2.75  4.25  1.95  2.88  4.00  1.85  2.7  4.4   \n",
+       "34777          Fulham   H  1.50  3.40  6.00  1.50  3.75  6.00  1.57  3.6  6.0   \n",
+       "72341      AZ Alkmaar   A  3.80  3.50  1.72  4.20  3.50  1.73  4.20  3.2  1.7   \n",
+       "21408        Rochdale   D  2.40  3.30  2.90  2.30  3.25  2.80  2.40  3.1  2.5   \n",
+       "13509       Ebbsfleet   H  2.30  3.20  2.62  2.30  3.20  2.75  2.10  3.3  2.8   \n",
+       "39717           Sedan   H  2.40  2.90  3.00  2.30  2.90  3.00  2.30  2.9  3.0   \n",
+       "\n",
+       "        GBH   GBD   GBA  \n",
+       "13327  2.00  3.20  3.20  \n",
+       "5718   1.85  3.25  4.00  \n",
+       "19366  1.75  3.40  4.25  \n",
+       "21120  2.40  3.25  2.65  \n",
+       "38896  1.91  2.85  4.00  \n",
+       "34777  1.57  3.75  5.75  \n",
+       "72341  4.60  3.50  1.66  \n",
+       "21408  2.35  3.25  2.75  \n",
+       "13509  2.30  3.25  2.75  \n",
+       "39717  2.35  2.90  3.00  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Countries   :  11\n",
+      "Competitions:  22\n",
+      "Seasons     :  316\n",
+      "Teams       :  643\n",
+      "Matches     :  105503\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -123,6 +454,80 @@
     "In the **production environment** data will be updated weekly, that is the update periodicity of the source data page. The update will be a batch process scheduled automatically. After updating the information  the process will be retrained and result files will be created.\n",
     "\n",
     "User will access result files and he will make his analysis using it.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Success of a betting house\n",
+    "\n",
+    "In fact this indicator is the **'Accuracy'** because it is 'Success (TP and TN) related to total matches.\n",
+    "\n",
+    "We expect to define a function like this: **accuracy (match, bethouse, scope)**\n",
+    "\n",
+    "With params:\n",
+    "\n",
+    "    match: Full information (register) of a match\n",
+    "    bethouse: Abrevation of the Bet House. Values: WH, SB, IW, GB\n",
+    "    scope: Columns to filter information. Values: Country, Competition, Season, Team or combination of them.\n",
+    "\n",
+    "This function will calculate accuracy = success/matches of a concret Bet House in the selected scope and in reference to the desired match.\n",
+    "\n",
+    "Example: match =\n",
+    "\n",
+    " Country     Competition     Season     Div     Date     HomeTeam     AwayTeam     FTR     WHH     WHD     WHA     SBH     SBD     SBA     IWH     IWD     IWA     GBH     GBD     GBA\n",
+    "\n",
+    "0 Belgium JupilerLeague 2003-2004 B1 2003-08-08 Club Brugge Genk H NaN NaN NaN 1.44 3.75 6.5 1.45 3.8 5.4 1.4 3.8 6.85\n",
+    "\n",
+    "result = accuracy(match, 'WH', ['Spain'])\n",
+    "\n",
+    "result = 0.6\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Divergence\n",
+    "\n",
+    "In a individual match divergence it's a measure of the difference between Bet House Quotes.\n",
+    "\n",
+    "We expect to define a function like this: **divergence(match)**\n",
+    "\n",
+    "We will use this function following these steps:\n",
+    "\n",
+    "1. Filter matches of this week. Optional we can filter also by country or competition\n",
+    "\n",
+    "2. Map rows calculating divergence\n",
+    "\n",
+    "3. Reduce result amb obtain top N divergence values \n",
+    "\n",
+    "Result will be a Dataframe with the N rows with highest divergence, that they are the ones we need to pay attention to.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Prediction Model\n",
+    "\n",
+    "Probably we will use a Classification Model, not selected yet, but that obtains a percentage of probability of win, draw or lose.\n",
+    "\n",
+    "Example:\n",
+    "features = ['Country','Competition','Season','HomeTeam','AwayTeam','WHH','WHD','WHA','SBH','SBD','SBA','IWH','IWD','IWA','GBH','GBD','GBA']\n",
+    "\n",
+    "label = 'FTR'\n",
+    "\n",
+    "model = Model.trail(features, label)\n",
+    "\n",
+    "prediction = model.predict(features)\n",
+    "\n",
+    "Result:\n",
+    "\n",
+    "Win: 'Belgium JupilerLeague 2003-2004 B1 2003-08-08 Club Brugge Genk  ...', 0.60\n",
+    "\n",
+    "Drop: 'Belgium JupilerLeague 2003-2004 B1 2003-08-08 Club Brugge Genk  ...', 0.30\n"
    ]
   },
   {
@@ -257,7 +662,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
